@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,36 +25,28 @@
 
 package test.com.sun.glass.ui.monocle;
 
-import com.sun.glass.ui.monocle.IntSetShim;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import com.sun.glass.ui.monocle.IntSetShim;
 
-@RunWith(Parameterized.class)
-public class IntSetTest {
+public final class IntSetTest {
 
     private Integer[] array;
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> data() {
-        Integer[][] sets = {
-                { 1 },
-                { 1, 2 },
-                { 1, 2, 3},
-                { 1, 1 },
-                { 1, 1, 1 },
-                { 1, 1, 2 },
-        };
-        return Arrays.asList(sets).stream()
-                .map(d -> new Object[] { d })
-                .collect(Collectors.toList());
+    private static Collection<Integer[]> parameters() {
+        return List.of(
+            new Integer[] { 1 },
+            new Integer[] { 1, 2 },
+            new Integer[] { 1, 2, 3 },
+            new Integer[] { 1, 1 },
+            new Integer[] { 1, 1, 1 },
+            new Integer[] { 1, 1, 2 }
+        );
     }
 
     public IntSetTest(Integer[] array) {
@@ -75,10 +67,10 @@ public class IntSetTest {
     }
 
     private void assertSet(Set<Integer> expected, IntSetShim actual) {
-        Assert.assertArrayEquals(
-                "Expected: " + expected + ", found " + actual,
+        Assertions.assertArrayEquals(
                 getHashSetAsArray(expected),
-                getIntSetAsArray(actual));
+                getIntSetAsArray(actual),
+                "Expected: " + expected + ", found " + actual);
     }
 
     @Test
